--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <aside class="card profile">
-        <div class="avatar">Replace with your photo</div>
+        <div class="avatar">ravindu.jpg</div>
         <div style="width:100%">
           <div style="display:flex;justify-content:space-between;align-items:center">
             <div>
