Update CV download links in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p class="muted">I am a 2nd-year Software Engineering undergraduate at NIBM with experience in Java-based full-stack development, web technologies, databases, and mobile apps. I enjoy building practical applications, working in teams, and learning new technologies to solve real-world problems.</p>
           
           <div style="margin: 20px 0;">
-            <a href="files/CV-Ravindu.pdf" download class="btn primary" 
+            <a href="CV-Ravindu.pdf" download class="btn primary" 
                style="text-decoration:none; display:inline-block">
               📄 Download My CV
             </a>
@@ -103,7 +103,7 @@
           </div>
           
           <div style="margin-top: 15px; text-align: center;">
-            <a href="files/CV-Ravindu.pdf" download 
+            <a href="CV-Ravindu.pdf" download 
                class="btn" 
                style="width:100%; text-decoration:none; display:block">
               📥 Download CV
