--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
           <h2>About</h2>
           <p class="muted">I am a 2nd-year Software Engineering undergraduate at NIBM with experience in Java-based full-stack development, web technologies, databases, and mobile apps. I enjoy building practical applications, working in teams, and learning new technologies to solve real-world problems.</p>
           
-          <div style="margin: 20px 0;">
-            <a href="CV-Ravindu.pdf" download class="btn primary" 
-               style="text-decoration:none; display:inline-block">
-              📄 Download My CV
-            </a>
-          </div>
+      <div class="avatar">
+  <img src="ravindu.jpg" alt="Ravindu Kawshalya" 
+       style="width:100%;height:100%;object-fit:cover">
+</div>
+
           
           <ul class="muted">
             <li>Languages & Frameworks: Java, Kotlin, PHP, Spring Boot, C#, C++, JavaScript</li>
