Fix image error handling in profile card

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
           <div class="profile-card">
             <div class="profile-img">
               <img src="ravindu.jpg" alt="Ravindu Kawshalya" 
-                   onerror="this.onerror=null; this.style.display='none'; this.parentElement.innerHTML='<div style=\"display:flex;flex-direction:column;align-items:center;gap:10px;color:var(--muted-text)\"><div style=\"font-size:24px\">👨‍💻</div><div>Add your photo</div><div style=\"font-size:12px\">ravindu.jpg</div></div>'">
+                   onerror="this.onerror=null; this.style.display='none'; this.parentElement.innerHTML='<div style=\"display:flex;flex-direction:column;align-items:center;gap:10px;color:var(--muted-text)\"><div style=\"font-size:24px\">👨‍💻</div><div style=\"font-size:12px\">ravindu.jpg</div></div>'">
             </div>
             <div class="status-badge">Open to opportunities</div>
             <div style="margin-top: 20px;">
