--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
         
         <div class="hero-image">
           <div class="profile-card">
-            <div class="profile-img">
-              <img src="ravindu.jpg" alt="Ravindu Kawshalya" 
-                   onerror="this.onerror=null; this.style.display='none'; this.parentElement.innerHTML='<div style=\"display:flex;flex-direction:column;align-items:center;gap:10px;color:var(--muted-text)\"><div style=\"font-size:24px\">👨‍💻</div><div style=\"font-size:12px\">ravindu.jpg</div></div>'">
-            </div>
+           <div class="profile-img">
+  <img src="ravindu.jpg" alt="Ravindu Kawshalya" 
+       style="width:100%;height:100%;object-fit:cover">
+</div>
             <div class="status-badge">Open to opportunities</div>
             <div style="margin-top: 20px;">
               <h3 style="margin-bottom: 8px;">Ravindu Kawshalya</h3>
