--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     <div class="container nav-container">
       <a href="#" class="logo">
         <div class="logo-icon">RK</div>
-        <div class="logo-text">Ravindu<span>.</span></div>
+        <div class="logo-text">Ravindu Kawshalya <span>.</span></div>
       </a>
       
       <button class="mobile-menu-btn" id="mobileMenuBtn">
